examples/negative/ffi/non_c_abi.kai
# Negative fixture (#511 / FFI contract): only the "C" ABI is
# supported. `extern "Rust"` must be rejected at parse time.

extern "Rust" fn puts(s: String) : Int / Ffi

fn main() : Int / Ffi = puts("hi")
